makefile for automatice all analysis process. updated unfolding for 2.0.0 version (earlier version). LLR generate a multifit file. extraanalysis generate weighted averages in file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
         "bitset": "cpp",
         "regex": "cpp",
         "shared_mutex": "cpp",
-        "*.tpp": "cpp"
+        "*.tpp": "cpp",
+        "complex": "cpp",
+        "csignal": "cpp"
     }
 }
