--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -141,6 +141,33 @@
             "miDebuggerPath": "/usr/bin/gdb"
         },
         {
+            "name": "g++ fit-supermultifit debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Fitting/fit",
+            "args": [ "-smult",
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/supermultifit_jt1020", 
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb0",
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb1",
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb2",
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb3",
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb4",
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb5"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Habilitar la impresión con sangría para gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
             "name": "g++ fit-fit debug",
             "type": "cppdbg",
             "request": "launch",
