--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -168,6 +168,35 @@
             "miDebuggerPath": "/usr/bin/gdb"
         },
         {
+            "name": "g++ fit-expandparams debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Fitting/fit",
+            "args": [ "-expand",
+                "../rootfiles/confFiles/DATA/merged_HiForestAOD_DATA_baseline_jt1020.multifit", 
+                "../rootfiles/analysis/merged_HiForestAOD_DATA_skimjet/supermultifit_baseline_jt1020",
+                "bkg.type",
+                "cheb0",
+                "cheb1",
+                "cheb2",
+                "cheb3",
+                "cheb4",
+                "cheb5"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Habilitar la impresión con sangría para gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
             "name": "g++ fit-fit debug",
             "type": "cppdbg",
             "request": "launch",
