added unfolding. corrected bugs.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -149,10 +149,7 @@
                 "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/supermultifit_jt1020", 
                 "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb0",
                 "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb1",
-                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb2",
-                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb3",
-                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb4",
-                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb5"],
+                "../rootfiles/analysis/merged_HiForestAOD_MC_skimjet/multifit_baseline_jt1020_cheb2",],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
